# SM-Ext-Audio

./: .gitmodules  Cargo.toml  azure-pipelines.yml  build.rs
.cargo/: config
gamedata/: audio.ext.games.txt
sm/: smsdk_config.h  smsdk_ext.cpp
sm/CDetour/: detours.h
sm/libudis86/: udis86.c
sourcepawn/include/: audio.inc
src/: codec.rs  lib.rs  player.rs  reader.rs  sm.rs
wepoll-sys-stjepang/: Cargo.toml  build.rs
wepoll-sys-stjepang/wepoll/: wepoll.c
